[package]
name = "programming-bitcoin"
version = "0.1.0"
edition = "2021"
rust-version = "1.69.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = {version = "0.4.3", features = ["rand"]}
num-primes = "0.3.0"
anyhow = "1.0.70"
num-integer = "0.1.45"
hex-literal = "0.4.1"
lazy_static = "1.4.0"
rand = "0.8.5"
hex = "0.4.3"